[package]
name = "trace"
version = "0.1.6"
authors = ["Gulshan Singh <gsingh2011@gmail.com>"]
repository = "https://github.com/gsingh93/trace"
license = "MIT"
description = "A syntax extension for tracing the execution of functions"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }

[dev-dependencies]
log = "0.4.8"
env_logger = "0.6.2"
