[package]
name = "trace"
version = "0.1.6"
authors = ["Gulshan Singh <gsingh2011@gmail.com>"]
repository = "https://github.com/gsingh93/trace"
license = "MIT"
readme = "README.md"
description = "A procedural macro for tracing the execution of functions"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }

[dev-dependencies]
log = "0.4.8"
env_logger = "0.8"
gag = "0.1.10"
